@@ -8,6 +8,7 @@ ChangeLog
     * Registration headers update
     * Create directory function does nothing if folder already exists
     * get_free_space() replaced by get_space_info(), added total size info
+    * Make on the fly download throttling possible
 
 0.6.0 (2021-12-17)
     * Introduce `const.State.PREPARED`
